[tool.poetry]
name = "smokesignal"
version = "0.1.0"
description = "Tool used to be able to shed light on CloudFlare Domains"
authors = ["foolshark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
