[tool.poetry]
name = "smokesignal"
version = "0.1.0"
description = "Tool used to be able to shed light on CloudFlare Domains"
authors = ["foolshark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
jupyter = "^1.0.0"
cryptography = "^42.0.1"
colorama = "^0.4.6"
timeout-decorator = "^0.5.0"
random-user-agent = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
